--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.5",
+    "@prisma/client": "^5.21.1",
+    "bcrypt": "^5.1.1",
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.2"
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "prisma": "^5.21.1"
   }
 }
