--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/vue": "^2.1.5",
     "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest"
