--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@prisma/client": "^5.21.1",
     "@tailwindcss/forms": "^0.5.9",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
+    "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "nuxt": "^3.13.2",
